assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Lobster:100,200,300,400,500,600,700');





/*--Navbar--*/

.styrk-logo {
    
    font-family: "Lobster", cursive, sans-serif;
    color: #b8c6b2 !important;  
}

.styrk-logo:link {
    text-decoration: none;
}

.styrk-logo:visited {
  text-decoration: none;
}


.styrk-logo:active {
  text-decoration: none;
}

.nav-dropdown:link {
    text-decoration: none;
}

.nav-dropdown:visited {
    text-decoration: none;
}


.nav-link:active {
  text-decoration: underline !important;
}

.nav-link {
    color: #b8c6b2 !important;
}

.nav-link:hover {
    text-decoration: none;
    color: white !important;
}




/*--Footer--*/

    
.footer-logo {
    width: 150px;
}

.envelope-icon {
    color: #b8c6b2;
}

.phone-icon {
    color: #b8c6b2;
}

.instagram-icon {
    color: #b8c6b2;
}

.facebook-icon {
    color: #b8c6b2;
}


.instagram-icon:hover {
  text-decoration: none;
  color: white;
}

.instagram-icon:link {
    text-decoration: none;
}

.instagram-icon:visited {
    text-decoration: none;
}
    

.facebook-icon:hover {
    text-decoration: none;
    color: white;
}

.facebook-icon:link {
    text-decoration: none;
}

.facebook-icon:visited {
    text-decoration: none;
}



/*--Index.html--*/

/*--Hero image--*/

.hero-container-desktop {
    height: 65vh;
    background-color: black;
}

.col-deadlift {
    background: url(../images/deadlift1.jpg) no-repeat bottom center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 68vh;
    margin-top: 70px; 
}

.col-woman {
    background: url(../images/woman-squat-k.jpg) no-repeat center center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 61vh;
    max-width: 2000px;
    margin-top: 65px;
}

.btn-home {
    background-color: #11613c;
}

.a-link {
    text-align: center;
}



/*--Callout--*/


/*--Bootstrap Carousel--*/

.carousel-caption {
    position: relative;
    right: 0%;
    left: 0%;
}


/*--Styrk Gym features--*/

.ul-we-offer-sm {
    margin: 0;
    padding: 0;
}

.row-we-offer-lg {
    max-width: 768px;
}



/*--Sign up button--*/

/*--Quotes--*/

/*--Features--*/




/*--Become a member section--*/

.fistbump-md {
    background: url(../images/fist-bump1-k.jpg) no-repeat center center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 600px;
    max-width: 2000px;
    overflow: hidden;
}


.fistbump-sm {
    background: url(../images/fist-bump1-k.jpg) no-repeat center center; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 300px;
    overflow: hidden;
}

.become-a-member {
    font-family: "Lobster", sans-serif;
    color: #b8c6b2;
}


/*--membership.html--*/

.mt-member-lg {
    margin-top: 200px;
}

.mt-member-sm {
    margin-top: 120px;
}

.membership-container {
height: 100px;
width: 80%;
}

.membership-container-lg {
height: 200px;

}

.btn-member {
    background-color: #11613c;
}


.membership-text {
    font-size: 30px;
    font-weight: 200;
}

.enviroment {
 background: url(../images/enviroment1-k.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100vh;
    }

    .ropes {
 background: url(../images/ropes1-k.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 130vh;
    }


    /*--gallery.html--*/

/*--responsive image grid from https://www.w3schools.com/howto/howto_css_image_grid_responsive.asp--*/


.row1 {
  display: flex;
  flex-wrap: wrap;
  padding: 0 4px;
  margin-top: 80px;
}


.column {
  flex: 25%;
  max-width: 25%;
  padding: 0 4px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}


@media screen and (max-width: 800px) {
  .column {
    flex: 50%;
    max-width: 50%;
  }
}


@media screen and (max-width: 600px) {
  .column {
    flex: 100%;
    max-width: 100%;
  }
}

/*--about-us.html--*/

.mt-about {
    margin-top: 90px;
}

    .about-trainer {
       max-height: 400px;
        
    }

    .h3-about{
    color: #b8c6b2;
    }

    .p-about-lg {
        color: #b8c6b2;
        font-size: 20px;
    }

    .p-about-sm {
        color: #b8c6b2;
        font-size: 17px;
    }

    


 /*--contact.html--*/


    .container-contact {
        color: #b8c6b2;
        max-width: 700px;
        margin-top: 80px;
    }
/*--responsive iframe from W3 school https://www.w3schools.com/howto/howto_css_responsive_iframes.asp--*/
    

.container-google-map {
  position: relative;
  width: 100%;
  overflow: hidden;
  padding-top: 56.25%; 
  height: 47vh;
}



.responsive-iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  max-width: 700px;
  height: 100%;
  max-height: 500px;
  border: none;
}

/*--responsive iframe from W3 school https://www.w3schools.com/howto/howto_css_responsive_iframes.asp--*/

